Flexify the navbar

--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -361,11 +361,14 @@ ul.row {
   text-align: center;
 }
 
-.nav .nav-item + .nav-item {
+.nav .nav-item {
   font-family: var(--nav-item-font-family);
   font-weight: var(--nav-item-font-weight);
   font-size: var(--nav-item-font-size);
   letter-spacing: var(--nav-item-letter-spacing);
+}
+
+.nav .nav-item + .nav-item {
   margin: 0 0 0 2rem;
 }
 
