--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -217,7 +217,7 @@ template {
   --nav-item-font-size: var(--font-size-medium);
   --nav-item-letter-spacing: 0.04rem;
   --nav-item-display: inline-block;
-  --nav-item-margin: 0 2rem 0 0;
+  --nav-item-margin: 0 0 0 2rem;
   --nav-item-link-hover: var(--color-white);
 
   /** BUTTON **/
@@ -369,7 +369,7 @@ ul.row {
 }
 
 .nav .nav-item + .nav-item {
-  margin: 0 0 0 2rem;
+  margin: var(--nav-item-margin);
 }
 
 .nav .nav-link {
