--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -753,7 +753,7 @@ ul.row {
   border-bottom: 0.2rem solid var(--color-light-grey);
 }
 
-.post-meta-list [class="post-meta"]:last-child {
+.post-meta-list [class*="post-meta"]:last-child {
   border: none;
   margin-bottom: 3rem;
 }
