--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -747,7 +747,7 @@ ul.row {
   display: block;
 }
 
-.post-meta-lis [class*="post-meta"] {
+.post-meta-list [class*="post-meta"] {
   margin-bottom: 1rem;
   padding-bottom: 1rem;
   border-bottom: 0.2rem solid var(--color-light-grey);
