--- a/flexbox/100-styles.css
+++ b/flexbox/100-styles.css
@@ -738,7 +738,7 @@ ul.row {
   height: auto;
 }
 
-.post-content:first-child {
+.post-content p:first-child {
   font-size: var(--font-size-x-large);
 }
 
