--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,8 +1,10 @@
-/* Nested hover declarations */
+/* Nested hover
+change button color on hover */
 
 button {
-  color: #FF0000;
-  &:hover {
-    color: #00FF00;
-  }
+    color: #FF0000;
+
+    &:hover {
+        color: #00FF00;
+    }
 }
